# mini-rpc

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  tests.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  tests_include-b12d07c.cmake
docs/: README.md  wrapper.md
examples/: client.cpp  server.cpp  showcase.cpp
public/: client.h  error.h  errors.h  result.h  server.h
src/: client.cpp  coder.h  common.h  errors.cpp  frame.cpp  frame.h  main.cpp  network_utils.h  result.cpp  server.cpp  wrapper.h
src/client/: frame.cpp  frame.h  rpc_client.cpp  rpc_client.h  transport.h
src/client/os/: unix.cpp  unix.h  win.cpp  win.h
src/frame/: frame.cpp  frame.h
src/platform/: platform.h
src/rpc/: handler.h
src/server/: protocol.cpp  protocol.h  rpc_server.cpp  rpc_server.h  transport_server.h  worker_pool.cpp  worker_pool.h
src/server/os/: unix_server.cpp  unix_server.h  win_server.cpp  win_server.h
tests/: test_coder.cpp  test_handler.cpp  test_intergation.cpp  test_multiclient.cpp  test_result.cpp  test_sample.cpp  test_wrapper.cpp
